# webjob

./: pyproject.toml
data/template_images/: The Lost Kitten.docx  metaData.json
src/: async_webjob.py  handle_rate.py  logging_utility.py  main.py  multi_character.py  pyproject.toml  requirements.txt  requirements1.txt  run.sh  single_character.py  stitch_image_outside.py  tester.py
